# firebird-ltrim-zero-collation

./: .gitignore  CMakeLists.txt  QUICK_START.md  README.md  compile.bat
config/: fbltrimzero.conf
src/: fbltrimzero.cpp
test/: test_collation.sql
